;; The library MenhirSdk is built here.

;; This rule generates the module [Version]. This module defines the value
;; [version] of type [string]. Its value is a string representation of our
;; 8-digit version number [XXXXXXXX]. This number is set in the [dune-project]
;; file.

(rule
  (with-stdout-to version.ml
    (echo "let version = \"%{version:menhir}\"\n")
  )
)

;; Compile MenhirSdk in this directory.

(library
  (name menhirSdk)
  (public_name menhirSdk)
 (synopsis "Toolkit for postprocessing Menhir automata (.cmly files)")
   (preprocess
   (pps
;;      graphql_ppx
      ;;      js_of_ocaml-ppx
      js_of_ocaml-ppx
      ppx_log
      ppx_deriving_yaml
      refl
      ppx_expect
      ppx_bench
      ppx_compare
      ppx_deriving.create
      ppx_deriving.enum
      ppx_deriving.eq
      ppx_deriving.fold
      ppx_deriving.iter
      ppx_deriving.ord
      ppx_deriving.show
      ppx_deriving_yojson
      ppx_fields_conv
      ppx_hash
      ppx_inline_test
      ppx_jane
      ppx_jsobject_conv
;      ppx_profiling
      ppx_protocol_conv
      ppx_sexp_conv
;      ppx_stage
;      ppx_tools.metaquot
;      ppx_yojson_conv
  ;    ppxlib.metaquot
 ;     profiling.ppx
      visitors.ppx
   ))
)
